# WalkingShadows

./: .bazelignore  .bazeliskrc  .bazelrc  .env.example  .gitignore  .pre-commit-config.yaml  BUILD.bazel  LICENSE  README.md  WORKSPACE  article_takeaway.md  docker-compose.yml  gazelle_python.yaml  prompt_engineering_takeaway.md  requirements.in  requirements.txt  requirements_lock.txt
.github/workflows/: cache-warmup.yaml  test.yaml
.ijwb/: .bazelproject
bazel/: all_http_archive.bzl  docker_setup.bzl  gazelle_setup.bzl  next.bzl  python_setup.bzl
docs/: prompt_engineering_takeaway.md  roadmap.md
experiments/manual/1/: README.md
experiments/manual/2/1-depict-settings/: record-10.txt  record-2.txt  record-5.txt  record-6.txt  record-7.txt
experiments/prompt-engineering/iter-1/: README.md  record.txt
experiments/prompt-engineering/iter-2/: README.md  main.py  story-dynamics.md
experiments/prompt-engineering/iter-2/stage-1-depict-settings/: record-1.txt  record-10.txt  record-11.txt  record-2.txt  record-3.txt  record-4.txt  record-8.txt  record-9.txt
experiments/prompt-engineering/iter-2/stage-2-story-backbone/: record-1.txt  record-2.txt  record-3.txt
experiments/prompt-engineering/iter-2/stage-3-outline-with-story-dynamics/: record-1.txt  record-2.txt  record-3.txt
experiments/prompt-engineering/iter-2/stage-4-more-high-level/: record-1.txt  record-2.txt  record-3.txt  record-4.txt
experiments/prompt-engineering/iter-2/stage-5-use-api/: record-2.txt
experiments/prompt-engineering/iter-2/stage-5-use-api/data-1/: input.txt  output.txt
experiments/prompt-engineering/iter-2/stage-6-thematic/: note.md  record-1.txt  record-2.txt  record-4.txt  record-6.txt
experiments/prompt-engineering/iter-2/stage-6-thematic/record-3/: input.txt  output.txt
experiments/prompt-engineering/iter-2/stage-6-thematic/record-5/: input.txt  output.txt
experiments/prompt-engineering/iter-2/stage-7-summarize-settings/: record-2.txt
experiments/prompt-engineering/iter-2/stage-7-summarize-settings/data-1/: input.txt  output.txt
scripts/: build_image.sh  dev.sh  launch.sh  run.sh  start_backend.sh  start_frontend.sh  test.sh  update_bazel_build.sh
scripts/db_for_test/: docker-compose.yml
src/: BUILD.bazel  __main__.py
src/backend/: .gitignore  BUILD.bazel  __init__.py  __main__.py  __test__.py  api.py  api.yml
src/backend/libs/errx/: BUILD.bazel  __init__.py
src/backend/libs/mongox/: BUILD.bazel  __init__.py  __test__.py  settings.py
src/backend/libs/openaix/: BUILD.bazel  __init__.py  settings.py
src/backend/libs/test_lib/: BUILD.bazel  __init__.py
src/backend/libs/testx/: BUILD.bazel  __init__.py  const.py  mongo_case.py
src/backend/libs/uvicornx/: BUILD.bazel  __init__.py  run.py  settings.py
src/backend/logic/: BUILD.bazel  __init__.py  note.py
src/backend/logic/test/: BUILD.bazel  __test__.py  test_note.py
src/backend/schema/: BUILD.bazel  __init__.py  config.py  service_context.py  singleton.py
src/backend/schema/test/: BUILD.bazel  __init__.py  __test__.py  test_config.py
src/backend/schema/test/data/: config.yaml  secret.yaml
src/backend/services/character/: BUILD.bazel  __main__.py
src/backend/services/character/routers/: tick.py
src/backend/services/character/scripts/: launch.sh
src/backend/services/character/settings/: BUILD.bazel  __init__.py  settings.py
src/backend/services/world/: BUILD.bazel  __main__.py
src/backend/services/world/api/test/: BUILD.bazel  __test__.py  conftest.py  test_tick.py
src/backend/services/world/api/world/: BUILD.bazel  __init__.py  crud.py  event.py  fact.py  memory.py  tick.py
src/backend/services/world/api/world/test/: BUILD.bazel  __test__.py  test_crud.py  test_tick.py  test_world.json  test_world.py
src/backend/services/world/app/: BUILD.bazel  __init__.py  app.py
src/backend/services/world/internal/llm/: BUILD.bazel  __init__.py  llm.py  world_chain.py
src/backend/services/world/internal/memory/: BUILD.bazel  memory_stream.py
src/backend/services/world/internal/memory/test/: BUILD.bazel  __test__.py  test_memory_stream.py
src/backend/services/world/internal/models/: BUILD.bazel  __init__.py  character.py  event.py  world.py
src/backend/services/world/internal/models/test/: BUILD.bazel  __test__.py  test_models.py
src/backend/services/world/internal/utils/: BUILD.bazel  __init__.py  case.py
src/backend/services/world/scripts/: launch.sh  test.sh
src/backend/services/world/server/: BUILD.bazel  __init__.py  app.py
src/backend/services/world/settings/: BUILD.bazel  __init__.py  settings.py
src/deploy/local/: docker-compose.yml
src/frontend/: .eslintrc.json  BUILD.bazel  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
src/frontend/assets/text/: message-form.html
src/frontend/components/: BUILD.bazel  date.tsx  layout.js  layout.tsx
src/frontend/lib/: BUILD.bazel  posts.ts  worlds.ts
src/frontend/pages/: BUILD.bazel  index.js  index.tsx
src/frontend/pages/api/: BUILD.bazel
src/frontend/pages/posts/: BUILD.bazel  [id].tsx
src/frontend/pages/worlds/: BUILD.bazel  [world_name].tsx
src/frontend/posts/: BUILD.bazel  pre-rendering.md  ssg-ssr.md
src/frontend/src/: config.ts
src/frontend/src/scenes/: example-scene.ts
