load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "backend",
    srcs = ["__init__.py"],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = ["@pip//flask"],
)

py_binary(
    name = "backend_bin",
    srcs = ["__main__.py"],
    imports = ["../.."],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [":backend"],
)

py_test(
    name = "backend_test",
    srcs = ["__test__.py"],
    imports = ["../.."],
    main = "__test__.py",
    deps = [":backend"],
)
