load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

# gazelle:python_root

py_library(
    name = "backend",
    srcs = [
        "__init__.py",
        "api.py",
        "schema/config.py",
        "schema/service_context.py",
        "schema/singleton.py",
    ],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//connexion",
        "@pip//flask",
        "@pip//flask_cors",
        "@pip//pydantic",
        "@pip//pydantic_yaml",
    ],
)

py_binary(
    name = "backend_bin",
    srcs = ["__main__.py"],
    imports = ["../.."],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [":backend"],
)

py_test(
    name = "backend_test",
    srcs = ["__test__.py"],
    imports = ["../.."],
    main = "__test__.py",
    deps = [":backend"],
)
