load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

# gazelle:python_root

py_library(
    name = "backend",
    srcs = [
        "__init__.py",
        "api.py",
    ],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = [
        "//src/backend/logic",
        "//src/backend/schema",
        "@pip//connexion",
        "@pip//flask",
        "@pip//flask_cors",
    ],
)

py_binary(
    name = "backend_bin",
    srcs = ["__main__.py"],
    data = glob(["config/**"]),
    imports = ["../.."],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [
        ":backend",
        "//src/backend/schema",
    ],
)

py_test(
    name = "backend_test",
    srcs = ["__test__.py"],
    imports = ["../.."],
    main = "__test__.py",
    tags = ["integration"],
    deps = [
        ":backend",
        "//src/backend/schema/test",
    ],
)
