load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "schema",
    srcs = [
        "__init__.py",
        "config.py",
        "service_context.py",
    ],
    imports = [".."],
    visibility = ["//src/backend:__subpackages__"],
    deps = [
        "@pip//langchain",
        "@pip//pydantic",
        "@pip//pydantic_yaml",
    ],
)
