load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

SRCS = glob([
    "**/*.tsx",
    "**/*.ts",
])

ts_project(
    name = "components",
    srcs = SRCS,
    declaration = True,
    resolve_json_module = True,
    tsconfig = "//src/frontend:tsconfig",
    visibility = ["//visibility:public"],
    deps = [
        "//src/frontend:node_modules/date-fns",
        "//src/frontend:node_modules/@types/react",
        "//src/frontend:node_modules/next",
    ],
)
