load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "uvicornx",
    srcs = [
        "__init__.py",
        "settings.py",
    ],
    imports = ["../.."],
    visibility = ["//src/backend:__subpackages__"],
    deps = [
        "@pip//pydantic",
        "@pip//uvicorn",
    ],
)
