load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_test(
    name = "test_test",
    srcs = [
        "__test__.py",
        "test_config.py",
    ],
    data = glob(["data/**"]),
    imports = ["../.."],
    main = "__test__.py",
    deps = [
        "//src/backend/schema",
        "@pip//pydantic_yaml",
    ],
    size = "small",
)

py_library(
    name = "test",
    srcs = ["__init__.py"],
    imports = ["../.."],
    visibility = ["//src/backend:__subpackages__"],
    deps = [
        "//src/backend/schema",
        "@pip//langchain",
    ],
)
