load("@rules_python//python:defs.bzl", "py_binary")
load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@io_bazel_rules_docker//python:image.bzl", "py_layer")

py_binary(
    name = "world_bin",
    srcs = ["__main__.py"],
    imports = ["../.."],
    main = "__main__.py",
    visibility = ["//src/backend:__subpackages__"],
    deps = [
        "//src/backend/libs/uvicornx",
        "//src/backend/services/world/api/world",
        "//src/backend/services/world/app",
        "//src/backend/services/world/settings",
    ],
)

LIBS = [
    "//src/backend/libs/uvicornx",
    "//src/backend/services/world/app",
    "//src/backend/services/world/api/world",
    "//src/backend/services/world/settings",
]

py_layer(
    name = "external_deps",
    filter = "@",
    deps = LIBS,
)

py3_image(
    name = "image",
    srcs = ["__main__.py"],
    imports = ["../.."],
    layers = [
        ":external_deps",
    ],
    main = "__main__.py",
    visibility = ["//src/backend:__subpackages__"],
    deps = LIBS,
)
