load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "app",
    srcs = [
        "__init__.py",
        "app.py",
    ],
    imports = ["../../.."],
    visibility = ["//src/backend:__subpackages__"],
    deps = [
        "//src/backend/libs/mongox",
        "//src/backend/services/world/internal/models",
        "//src/backend/services/world/settings",
        "@pip//fastapi",
        "@pip//loguru",
    ],
)
