load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "settings",
    srcs = [
        "__init__.py",
        "settings.py",
    ],
    imports = ["../../.."],
    visibility = ["//src/backend:__subpackages__"],
    deps = [
        "//src/backend/libs/mongox",
        "//src/backend/libs/openaix",
        "//src/backend/libs/uvicornx",
        "@pip//pydantic",
    ],
)
