load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_test(
    name = "test_test",
    srcs = [
        "__test__.py",
        "test_tick.py",
    ],
    imports = ["../../../.."],
    main = "__test__.py",
    deps = [
        "//src/backend/services/world",
        "//src/backend/services/world/server",
        "@pip//httpx",
    ],
)

py_library(
    name = "conftest",
    testonly = True,
    srcs = ["conftest.py"],
    imports = ["../../../.."],
    visibility = ["//src/backend:__subpackages__"],
    deps = [
        "//src/backend/services/world",
        "//src/backend/services/world/server",
        "@pip//httpx",
        "@pip//pytest_asyncio",
    ],
)
