load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "world",
    srcs = [
        "__init__.py",
        "event.py",
        "memory.py",
        "tick.py",
    ],
    imports = ["../../../.."],
    visibility = ["//src/backend:__subpackages__"],
    deps = [
        "@pip//fastapi",
        "@pip//loguru",
        "@pip//pydantic",
    ],
)
