load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "world",
    srcs = [
        "__init__.py",
        "crud.py",
        "event.py",
        "memory.py",
        "tick.py",
    ],
    imports = ["../../../.."],
    visibility = ["//src/backend:__subpackages__"],
    deps = [
        "//src/backend/libs/errx",
        "//src/backend/services/world/internal/models",
        "//src/backend/services/world/settings",
        "@pip//fastapi",
        "@pip//loguru",
        "@pip//pydantic",
    ],
)
