load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "models",
    srcs = [
        "__init__.py",
        "character.py",
        "event.py",
        "world.py",
    ],
    imports = ["../../../.."],
    visibility = ["//src/backend:__subpackages__"],
    deps = [
        "@pip//beanie",
        "@pip//langchain",
    ],
)
