load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_test",
    srcs = [
        "__test__.py",
        "test_tick.py",
    ],
    imports = ["../../../../.."],
    main = "__test__.py",
    deps = [
        "//src/backend/services/world/api/world",
        "//src/backend/services/world/server",
        "@pip//httpx",
    ],
)
