load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_test",
    srcs = [
        "__test__.py",
        "test_tick.py",
        "test_world.py",
    ],
    imports = ["../../../../.."],
    main = "__test__.py",
    tags = [
        "service",
    ],
    deps = [
        "//src/backend/services/world/api/world",
        "//src/backend/services/world/app",
        "//src/backend/services/world/internal/utils",
        "@pip//httpx",
    ],
)
