load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_test",
    srcs = [
        "__test__.py",
        "test_memory_stream.py",
    ],
    imports = ["../../../../.."],
    main = "__test__.py",
    deps = [
        "//src/backend/libs/testx",
        "//src/backend/services/world/internal/memory",
        "@pip//langchain",
        "@pip//redis",
        "@pip//testcontainers",
        "@pip//tiktoken",  # keep
        "@pip//openai",  # keep
    ],
)
