load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_test",
    srcs = [
        "__test__.py",
        "test_models.py",
    ],
    imports = ["../../../../.."],
    main = "__test__.py",
    deps = [
        "//src/backend/libs/testx",
        "//src/backend/services/world",
        "@pip//beanie",
        "@pip//motor",
        "@pip//testcontainers",
    ],
)
